--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 boto==2.38.0
 django-storages==1.1.8
-Django==1.8.4
+Django==1.8.8  # rq.filter: >=1.8,<1.9
 Pillow==2.3.1
 argparse==1.2.1
 gunicorn==19.3.0
